[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = 'sett currencies SettCurrencies pallet'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = "stp258"
repository = 'https://github.com/Setheum-Labs/Setheum/'
version = '0.5.0-dev'

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

serp-traits = { default-features = false,  version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/serp-traits"}
funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
orml-utilities = { version = "0.4.0", default-features = false }

num-rational = { default-features = false, version = '0.3.2' }
num-traits = { version = "0.2.14", default-features = false }
fixed = { default-features = false, version = '1.6.0' }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"
pallet-balances = "3.0.0"
stp258-tokens = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"serp-traits/std",
	"orml-utilities/std",
    "num-rational/std",
	"num-traits/std",
    "fixed/std",
]
